Bug 167569 - Filesave RTF: spacing in lists is saved incorrectly
Summary: Filesave RTF: spacing in lists is saved incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2025-07-18 09:44 UTC by Timur
Modified: 2025-08-11 10:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample RTF (106.98 KB, text/rtf)
2025-07-18 09:44 UTC, Timur
Details
Sample RTF (86.54 KB, text/rtf)
2025-07-18 10:20 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-07-18 09:44:40 UTC
Created attachment 201868 [details]
Sample RTF

After other fixes including bug 167512, filesae of RTF looks much better, but not fully correct, as last red line is not seen after RT.
Depending on a sample, it may be seen or not when opening saved file in Word.
Comment 1 Timur 2025-07-18 10:20:56 UTC
Created attachment 201871 [details]
Sample RTF

Seems regression from 7.5.

commit 6e1c8bcec511444d2d51c5c5143be56d1900e5e6	[log]
author	Justin Luth <jluth@mail.com>	Sat Sep 03 08:37:19 2022 -0400
committer	Michael Stahl <michael.stahl@allotropia.de>	Tue Sep 20 10:53:01 2022 +0200

tdf#150613 sw: better DOC import of paragraph marker formatting

Following the lead of LO 6.4
commit 5ba30f588d6e41a13d68b1461345fca7a7ca61ac.

This fixes a LO 7.2 regression from tdf#108518.
This patch depends on tdf#117994 being fixed in order
for ww8export3's testTdf108518_CRnumformatting to round-trip.

The problem here is that Word allows formatting the paragraph end
marker, and applies the same formatting to the generated numbering
string; Writer has no such marker thing.
Comment 2 Commit Notification 2025-07-22 20:40:47 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f4868348c14b305fcd75744e1e3544d0d3a5d61

tdf#167569: RTF: Export paragraph mark properties

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Mike Kaganski 2025-07-26 19:42:11 UTC
Since it's still wrong on Linux, let's reopen.

In fact, it's the same as bug 141671 - which is closed fixed, but if you check the result of export in LO of attachment 171148 [details] there, using word - you would see, that LO generated a bad formatting right in the beginning, where the font would suddenly change from Cambria to Courier starting from the first underlying text. This is rather large problem of incorrect generation of character-level formatting on associate properties level.

I am working on a solution.
Comment 4 Commit Notification 2025-07-28 12:01:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/73bd9ccf16091613cc89d6f46e26efccda718ea3

tdf#167569: Reimplement RTF character formatting output

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Mike Kaganski 2025-07-28 12:04:24 UTC
Hope it's fixed for good this time.
Comment 6 Commit Notification 2025-08-11 10:11:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0aeaa35972a3915491ca288d201e30246bf916d8

tdf#167569: RTF: Export paragraph mark properties

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-08-11 10:13:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/320f2d4d55831127aa749f7858ac11ee3a504ffe

tdf#167569: Reimplement RTF character formatting output

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.