tdf#167569: RTF: Export paragraph mark properties

In commits:

    5ba30f588d6e41a13d68b1461345fca7a7ca61ac
    tdf#64222 sw: better DOCX import/export of paragraph marker formatting
    2019-09-17

    6e1c8bcec511444d2d51c5c5143be56d1900e5e6
    tdf#150613 sw: better DOC import of paragraph marker formatting
    2022-09-20

    6249858a8972aef077e0249bd93cfe8f01bce4d6
    sw: ODT import/export of DOCX's paragraph marker formatting
    2022-12-19

    a25eda715591cfa96136bcfd95360156516239d1
    tdf#131386 writerfilter: RTF import paragraph mark formatting
    2023-01-13

import and export of paragraph marker (as defined by Word and its file formats)
was implemented, except for export to RTF. This change implements the latter.

Change-Id: I2208a416377be42d2e6c5d5042cb92bc8109b4c5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188084
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 7f4868348c14b305fcd75744e1e3544d0d3a5d61)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188195
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>